--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Ankit Rawat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.19"
   }
 }
